--- a/Application Support/template/index.html.twig
+++ b/Application Support/template/index.html.twig
@@ -36,11 +36,12 @@
         .segment-2 {
             background: #f5f5f5;
             width: 100%;
+            border-top: 3px solid #eeeeee;
             margin-top: 35px;
         }
 
         .segment-2 .page-header {
-            margin-top: 20px;
+            margin-top: 15px;
         }
 
         .segment-2 .page-header h1 {
