--- a/Application Support/template/index.html.twig
+++ b/Application Support/template/index.html.twig
@@ -8,121 +8,7 @@
     <title>Qafoo Galaxy - Curated Ansible Roles</title>
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .container {
-            max-width: 890px;
-        }
-
-        .page-header h1 {
-            margin-bottom: 0;
-        }
-
-        h2 {
-            margin-top: 35px;
-        }
-
-        .lead {
-            margin-top: 18px;
-            margin-bottom: 35px;
-        }
-
-        .segment-1 {
-            background: #ffffff;
-            width: 100%;
-        }
-
-        .segment-2 {
-            background: #f5f5f5;
-            width: 100%;
-            border-top: 3px solid #eeeeee;
-            margin-top: 35px;
-        }
-
-        .segment-2 .page-header {
-            margin-top: 15px;
-        }
-
-        .segment-2 .page-header h1 {
-            margin-top: 5px;
-        }
-
-        .dl-horizontal {
-            margin-top: 30px;
-            margin-bottom: 0;
-        }
-
-        /*
-         * Callouts
-         *
-         * Not quite alerts, but custom and helpful notes for folks reading the docs.
-         * Requires a base and modifier class.
-         */
-
-        /* Common styles for all types */
-        .bs-callout {
-            padding: 20px;
-            margin: 20px 0;
-            border: 1px solid #eee;
-            border-left-width: 5px;
-            border-radius: 3px;
-        }
-
-        .bs-callout h4 {
-            margin-top: 0;
-            margin-bottom: 5px;
-        }
-
-        .bs-callout p:last-child {
-            margin-bottom: 0;
-        }
-
-        .bs-callout code {
-            border-radius: 3px;
-        }
-
-        /* Tighten up space between multiple callouts */
-        .bs-callout + .bs-callout {
-            margin-top: -5px;
-        }
-
-        /* Variations */
-        .bs-callout-danger {
-            border-left-color: #d9534f;
-        }
-
-        .bs-callout-danger h4 {
-            color: #d9534f;
-        }
-
-        .bs-callout-warning {
-            border-left-color: #f0ad4e;
-        }
-
-        .bs-callout-warning h4 {
-            color: #f0ad4e;
-        }
-
-        .bs-callout-info {
-            border-left-color: #5bc0de;
-        }
-
-        .bs-callout-info h4 {
-            color: #5bc0de;
-        }
-
-        .bs-callout-success {
-            border-left-color: #5cb85c;
-        }
-
-        .bs-callout-success h4 {
-            color: #5cb85c;
-        }
-
-        .bs-callout-bg-white {
-            background-color: #ffffff;
-        }
-    </style>
-
+    <link href="styles/galaxy.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -323,77 +209,6 @@
 
 <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.transit/0.9.9/jquery.transit.min.js"></script>
-<script>
-    $(function () {
-        var packages = $('h4.package-name');
-        var timer;
-        $('input#search').keyup(function () {
-            clearTimeout(timer);
-            var ms = 350; // milliseconds
-            var needle = $(this).val().toLowerCase(), show;
-            timer = setTimeout(function () {
-                packages.each(function () {
-                    var $packageName = $(this);
-                    var $package = $packageName.parent();
-                    show = $packageName.text().toLowerCase().indexOf(needle) != -1;
-                    $package.stop(true, true);
-                    switch(true) {
-                        case show && $package.hasClass("is-shown"):
-                            // Nothing to do
-                        break;
-                        case show && !$package.hasClass("is-shown"):
-                            // Animate in
-                            $package.css({
-                                display: "inherit",
-                                x: "-50px",
-                                opacity: 0
-                            });
-                            $package.transition({
-                                x: 0,
-                                opacity: 1
-                            }, 500, "snap")
-                            .addClass("is-shown");
-                        break;
-                        case !show && !$package.hasClass("is-shown"):
-                            // Nothing to do
-                        break;
-                        case !show && $package.hasClass("is-shown"):
-                            // Animate out
-                            $package.transition({
-                                x: "-50px",
-                                opacity: 0
-                            }, 500, "snap")
-                            .transition({
-                                display: "none"
-                            }, 1)
-                            .removeClass("is-shown");
-                        break;
-                    }
-                });
-            }, ms);
-        })
-        $('input#search').change(function () {
-            window.location.hash = "!/" + $(this).val().toLowerCase();
-        });
-        $(window).on("hashchange", function () {
-            var $input = $('input#search');
-            if (window.location.hash.indexOf("#!/") == 0) {
-                $input.val(window.location.hash.replace(/#!\//, "").toLowerCase());
-                $input.trigger("keyup");
-            } else {
-                var $anchor = $("h3[id='" + window.location.hash.replace(/^#/, "") + "']");
-                if ($anchor.length != $anchor.filter(":visible").length) {
-                    $input.val("").trigger("keyup");
-                    $anchor.get(0).scrollIntoView();
-                }
-            }
-        });
-        $(window).trigger("hashchange");
-        // If page is loaded with a hash focus the search field
-        if (window.location.hash.length != 0) {
-            $('input#search').focus();
-        }
-    });
-</script>
+<script src="scripts/galaxy.js"></script>
 </body>
 </html>
