--- a/Application Support/template/index.html.twig
+++ b/Application Support/template/index.html.twig
@@ -105,7 +105,7 @@
             your role new role, we will happily fork it into our organization
             once our quality criteria is met.
 
-            The <a href="http://github.com/QafooGalaxy/bootstrap-role">bootstrap-role</a>
+            The <a href="http://github.com/QafooGalaxy/BootstrapRole">BootstrapRole</a>
             repository serves as a template for a basic role. It reflects
             a good starting point on how a new role should be structured and
             document.
